# localstack-testing

./: .gitignore  README.md  app.py  cdk.json  conftest.py  requirements-dev.txt  requirements.txt
test_stack/: auth.py  graphql.py  stack.py
test_stack/functions/graphql/resolvers/default/: README.md  index.py  pyproject.toml  requirements.txt
test_stack/schema/: schema.graphql
tests/: test_appsync_cognito_auth.py
