[tool.poetry]
name = "default"
version = "0.1.0"
description = "Default GraphQL resolvers for Test Case"
authors = ["David Pretty <david@launchlab.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "^1.26.5"
boto3 = "^1.24.34"
arrow = "^1.2.2"
sentry-sdk = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
